Some bug fixes
- Page scroll bar goes away/page is no longer too long
- Added pattern restrictions so user's can't input decimals

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  height: inherit;
+  height: min-content;
   margin-top: 100px;
   align-items: center;
   justify-content: center;
