--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,7 +44,7 @@ $dark-theme: mat.define-dark-theme(
 
 html,
 body {
-  height: 100%;
+  height: min-content;
 }
 
 body {
